--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -138,22 +138,34 @@
       width: 10.9375rem;
       height: 10.9375rem;
       font-size: 1.5rem;
+
+      &:hover {
+        font-size: 1.25rem !important;
+      }
     }
 
     @media screen and (max-width: 48rem) {
       width: 9.375rem;
       height: 9.375rem;
       font-size: 1.25rem;
+
+      &:hover {
+        font-size: 1rem !important;
+      }
     }
 
     @media screen and (max-width: 36rem) {
       width: 6.25rem;
       height: 6.25rem;
       font-size: 1rem;
+
+      &:hover {
+        font-size: 0.75rem !important;
+      }
     }
 
     &:hover {
-      font-size: 2.5rem;
+      font-size: 1.5rem;
     }
 
     &::before {
