--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -52,7 +52,37 @@
       width: 60%;
       z-index: 10;
 
+      -webkit-animation: slide-in-right 0.25s
+        cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+      animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
       display: none;
+    }
+
+    @-webkit-keyframes slide-in-right {
+      0% {
+        -webkit-transform: translateX(1000px);
+        transform: translateX(1000px);
+        opacity: 0;
+      }
+      100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes slide-in-right {
+      0% {
+        -webkit-transform: translateX(1000px);
+        transform: translateX(1000px);
+        opacity: 0;
+      }
+      100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+      }
     }
 
     &.show-mobile-nav {
